updating our details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a nerdy anime and comics loving person. I have two dogs, a yorkie mix and a rat terrier mix.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Georgia, USA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love reading, arts and crafts, and watching anime.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To be a successful developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Georgia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I find that development is like a giant puzzle, and I love puzzles. I want to be able to take on a challenging and fun career in web development as well.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://github.com/VHarris113">Github</a></li>
         </ul>
     </footer>
 </body>
